# AR-diagass

./: ANDROID_FIX.md  BACKEND_MOBILE_INTEGRATION.md  BODY_PIX_FIX.md  CHAT_SETUP_GUIDE.md  DRAWING_FEATURE_IMPROVEMENTS.md  DRAWING_FIX_TESTING.md  FIXES_SUMMARY.md  IMPLEMENTATION_STATUS.md  README.md  SESSION_UI_IMPROVEMENTS.md  Z_INDEX_HIERARCHY.md  test_backend.py  test_endpoints.sh
backend/: .env  .env.example  .gitignore  ASSESSMENT_SYSTEM.md  DATABASE_SETUP.md  INGESTION_COMPLETE.md  Makefile  README.md  SETUP_VERIFICATION.md  alembic.ini  chat_with_ai.py  demo_assessment.py  direct_chat.py  medical_scenarios.py  pyproject.toml  requirements-dev.txt  requirements.txt  server_manager.py  start_server.bat  test_api.py  test_assessment.py
backend/app/: __init__.py  main.py  settings.py
backend/app/api/: __init__.py  auth.py  chat.py  health.py  ingestion.py  sync.py
backend/app/db/: __init__.py  core.py  models.py  vector.py
backend/app/prompts/: __init__.py  assessment_manager.py  injury_assessment.py
backend/app/services/: __init__.py  ingestion.py  rag.py  whisper.py
backend/docs/: INGESTION.md
backend/migrations/: env.py
backend/migrations/versions/: 5374a889b6fe_initial_tables.py
backend/scripts/: ingest_data_folder.py  seed_medical_data.py
mobile/: .env  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  syntax-check.js  test-features.js  test-imports.js  test-tensorflow-imports.js  tsconfig.json  verify-component.js
mobile/app/: _layout.tsx  session.tsx
(+31 files in other folders)
